# Kuber_Practice

./: Dockerfile  pyproject.toml  requirements.txt
FASTAPI/: main.py
FASTAPI/app/: app.py
helm-test/: values.yaml
helm-test/templates/: deployment.yaml  service.yaml
